--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Hello world!</h1>
     <div class="container">
-        <div class="box" ></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="boxA" ></div>
+        <div class="boxB"></div>
+        <div class="boxC"></div>
     </div>
 </body>
 </html>
